%% DAK LOUK DOMAIN – VIEW MODELS
classDiagram
class UserVM
UserVM : +id int
UserVM : +username String
UserVM : +profileImageUrl String?
UserVM : +bio String?
UserVM : +createdAt DateTime
UserVM : +updatedAt DateTime
Cacheable <|-- UserVM

class CartVM
CartVM : +merchant CartMerchantVM
CartVM o-- CartMerchantVM
CartVM : +items List~CartItemVM~
Cacheable <|-- CartVM

class CartItemVM
CartItemVM : +id int
CartItemVM : +userId int
CartItemVM : +productId int
CartItemVM : +name String
CartItemVM : +price double
CartItemVM : +image String
CartItemVM : +quantity int
CartItemVM : +availableQuantity int
CartItemVM : +createdAt DateTime
CartItemVM : +updatedAt DateTime

class CartMerchantVM
CartMerchantVM : +id int
CartMerchantVM : +username String
CartMerchantVM : +profileImage String

class OrderVM
OrderVM : +id int
OrderVM : +merchantName String
OrderVM : +merchantProfileImage String
OrderVM : +status String
OrderVM : +products List~OrderProductVM~
OrderVM : +totalPrice int
OrderVM : +createdAt DateTime
Cacheable <|-- OrderVM

class OrderProductVM
OrderProductVM : +id int
OrderProductVM : +productName String
OrderProductVM : +productImageUrl String
OrderProductVM : +quantity int
Cacheable <|-- OrderProductVM

class PostVM
PostVM : +id int
PostVM : +merchantId int
PostVM : +caption String?
PostVM : +promoMedias List~PromoMediaModel~?
PostVM : +createdAt DateTime
PostVM : +updatedAt DateTime
PostVM : +likesCount int
PostVM : +savesCount int
PostVM : +isLiked bool
PostVM : +isSaved bool
PostVM : +merchant PostMerchantVM
PostVM o-- PostMerchantVM
PostVM : +products List~PostProductVM~
Cacheable <|-- PostVM

class PostProductVM
PostProductVM : +id int
PostProductVM : +name String
PostProductVM : +medias List~MediaModel~
PostProductVM : +price double
PostProductVM : +quantity int
PostProductVM : +description String
PostProductVM : +category ProductCategory
PostProductVM o-- ProductCategory
PostProductVM : +isAddedToCart bool
Cacheable <|-- PostProductVM

class PostMerchantVM
PostMerchantVM : +id int
PostMerchantVM : +name String
PostMerchantVM : +bio String
PostMerchantVM : +profileImage String
PostMerchantVM : +username String
PostMerchantVM : +rating double
Cacheable <|-- PostMerchantVM

class ChatVM
ChatVM : +id int
ChatVM : +isMine bool
ChatVM : +text String
ChatVM : +createdAt DateTime
ChatVM : +updatedAt DateTime
Cacheable <|-- ChatVM

class ChatRoomVM
ChatRoomVM : +id int
ChatRoomVM : +merchantName String
ChatRoomVM : +merchantProfileImage String
ChatRoomVM : +timeAgo String
ChatRoomVM : +latestText String
Cacheable <|-- ChatRoomVM

class LiveStreamVM
LiveStreamVM : +id int
LiveStreamVM : +merchantId int
LiveStreamVM : +title String
LiveStreamVM : +streamUrl String
LiveStreamVM : +thumbnailUrl String?
LiveStreamVM : +viewCount int
LiveStreamVM : +createdAt String
LiveStreamVM : +updatedAt String
LiveStreamVM : +merchantName String?
LiveStreamVM : +merchantProfileImage String?
LiveStreamVM : +productNames List~String~?
LiveStreamVM : +chatCount int
Cacheable <|-- LiveStreamVM

class LiveStreamChatVM
LiveStreamChatVM : +id int
LiveStreamChatVM : +username String
LiveStreamChatVM : +profileImage String
LiveStreamChatVM : +text String
Cacheable <|-- LiveStreamChatVM

class MerchantVM
MerchantVM : +id int
MerchantVM : +username String
MerchantVM : +profileImage String
MerchantVM : +bio String
MerchantVM : +rating double
MerchantVM : +createdAt DateTime
MerchantVM : +updatedAt DateTime
Cacheable <|-- MerchantVM

class UserProfileVM
UserProfileVM : +id int
UserProfileVM : +username String
UserProfileVM : +profileImageUrl String
UserProfileVM : +bio String
UserProfileVM : +createdAt DateTime
UserProfileVM : +updatedAt DateTime
Cacheable <|-- UserProfileVM

class UserProfileLikedSavedPostsVM
UserProfileLikedSavedPostsVM : +id int
UserProfileLikedSavedPostsVM : +imageUrl String
UserProfileLikedSavedPostsVM : +caption String
Cacheable <|-- UserProfileLikedSavedPostsVM

class MerchantPostsVM
MerchantPostsVM : +id int
MerchantPostsVM : +caption String
MerchantPostsVM : +imageUrl String
Cacheable <|-- MerchantPostsVM

class MerchantLivestreamsVM
MerchantLivestreamsVM : +id int
MerchantLivestreamsVM : +title String
MerchantLivestreamsVM : +thumbnailUrl String
Cacheable <|-- MerchantLivestreamsVM

class MerchantProductsVM
MerchantProductsVM : +id int
MerchantProductsVM : +name String
MerchantProductsVM : +image String
MerchantProductsVM : +quantity int
MerchantProductsVM : +price double
MerchantProductsVM : +isAddedToCart bool
Cacheable <|-- MerchantProductsVM

class LiveStreamProductsVM
LiveStreamProductsVM : +id int
LiveStreamProductsVM : +name String
LiveStreamProductsVM : +price double
LiveStreamProductsVM : +quantity int
LiveStreamProductsVM : +medias List~MediaModel~
Cacheable <|-- LiveStreamProductsVM

class ProductMediaVM
ProductMediaVM : +id int
ProductMediaVM : +productId int
ProductMediaVM : +url String
ProductMediaVM : +mediaType String?
ProductMediaVM : +createdAt DateTime
ProductMediaVM : +updatedAt DateTime
ProductMediaVM : +isVideo bool
ProductMediaVM : +isImage bool
Cacheable <|-- ProductMediaVM

class PromoMediaVM
PromoMediaVM : +id int
PromoMediaVM : +postId int
PromoMediaVM : +url String
PromoMediaVM : +mediaType MediaType?
PromoMediaVM o-- MediaType
PromoMediaVM : +createdAt DateTime
PromoMediaVM : +updatedAt DateTime
PromoMediaVM : +isVideo bool
PromoMediaVM : +isImage bool
Cacheable <|-- PromoMediaVM

class ProductVM
ProductVM : +id int
ProductVM : +merchantId int
ProductVM : +name String
ProductVM : +description String?
ProductVM : +price double
ProductVM : +quantity int
ProductVM : +createdAt DateTime
ProductVM : +updatedAt DateTime
ProductVM : +merchantName String?
ProductVM : +merchantProfileImage String?
ProductVM : +mediaUrls List~String~?
ProductVM : +categories List~String~?
ProductVM : +primaryImageUrl String?
Cacheable <|-- ProductVM

class OrderMerchantVM
OrderMerchantVM : +id int
OrderMerchantVM : +username String
OrderMerchantVM : +userProfileImage String
OrderMerchantVM : +status OrderStatusEnum
OrderMerchantVM o-- OrderStatusEnum
OrderMerchantVM : +products List~OrderProductMerchantVM~
OrderMerchantVM : +totalPrice int
OrderMerchantVM : +createdAt DateTime
Cacheable <|-- OrderMerchantVM

class OrderProductMerchantVM
OrderProductMerchantVM : +id int
OrderProductMerchantVM : +productName String
OrderProductMerchantVM : +productImageUrl String
OrderProductMerchantVM : +quantity int
Cacheable <|-- OrderProductMerchantVM

class MerchantChatRoomVM
MerchantChatRoomVM : +id int
MerchantChatRoomVM : +buyerName String
MerchantChatRoomVM : +buyerProfileImage String
MerchantChatRoomVM : +timeAgo String
MerchantChatRoomVM : +latestText String
Cacheable <|-- MerchantChatRoomVM

class MerchantChatVM
MerchantChatVM : +id int
MerchantChatVM : +isMine bool
MerchantChatVM : +text String
MerchantChatVM : +createdAt DateTime
MerchantChatVM : +updatedAt DateTime
Cacheable <|-- MerchantChatVM

class MerchantLiveStreamsVM
MerchantLiveStreamsVM : +id int
MerchantLiveStreamsVM : +title String
MerchantLiveStreamsVM : +streamUrl String
MerchantLiveStreamsVM : +thumbnailUrl String?
MerchantLiveStreamsVM : +viewCount int
MerchantLiveStreamsVM : +createdAt String
MerchantLiveStreamsVM : +updatedAt String
MerchantLiveStreamsVM : +products List~MerchantLiveStreamsProductsVM~?
Cacheable <|-- MerchantLiveStreamsVM

class MerchantLiveStreamsProductsVM
MerchantLiveStreamsProductsVM : +id int
MerchantLiveStreamsProductsVM : +name String
MerchantLiveStreamsProductsVM : +price double
MerchantLiveStreamsProductsVM : +quantity int
MerchantLiveStreamsProductsVM : +imageUrls List~String~
Cacheable <|-- MerchantLiveStreamsProductsVM

